manifests/web-client/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-client
  labels:
    app.kubernetes.io/name: web-client
