manifests/web-client/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-client
  namespace: web-client
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - web.ems.local
      secretName: web-client-tls
  rules:
    - host: web.ems.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-client
                port:
                  number: 80
